Fix the overflow

--- a/static/style/components/_header.scss
+++ b/static/style/components/_header.scss
@@ -1,7 +1,7 @@
 header {
-    overflow: hidden;
 
     .menu {
+        overflow: hidden;
         width: 100%;
         height: 60px;
         position: sticky;
@@ -97,6 +97,11 @@ header {
         align-items: center;
         left: -100%;
         transition: left 300ms;
+        overflow-y: scroll;
+
+        @media (max-height: 750px) {
+            overflow-y: scroll;
+        }
 
         &.nav--open {
             left: 0;
